--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,10 @@
     "search.exclude": {
         "**/.yarn": true,
         "**/.pnp.*": true
-    }
+    },
+    "prettier.endOfLine": "auto",
+    "prettier.enable": false,
+    "eslint.format.enable": true,
+    "eslint.packageManager": "yarn",
+    "eslint.lintTask.enable": true
 }
