--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -7,25 +7,62 @@ globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
   BigInt: readonly
-parser: '@typescript-eslint/parser'
+parser: "@typescript-eslint/parser"
 plugins:
-  - '@typescript-eslint'
+  - "@typescript-eslint"
   - simple-import-sort
+ignorePatterns:
+  - public/
+  - "*.spec.ts"
 rules:
-  '@typescript-eslint/dot-notation': 0
-  '@typescript-eslint/no-implied-eval': 0
-  '@typescript-eslint/no-throw-literal': 0
-  '@typescript-eslint/return-await': 0
+  "@typescript-eslint/dot-notation": 0
+  "@typescript-eslint/no-implied-eval": 0
+  "@typescript-eslint/no-throw-literal": 0
+  "@typescript-eslint/return-await": 0
 
-  '@typescript-eslint/indent':
+  "@typescript-eslint/indent":
     - warn
     - 4
-  '@typescript-eslint/lines-between-class-members':
+  "@typescript-eslint/lines-between-class-members":
     - error
     - always
     - exceptAfterSingleLine: true
-  '@typescript-eslint/naming-convention': 0
-  '@typescript-eslint/no-redeclare': 0
+  "@typescript-eslint/naming-convention":
+    - warn
+    - selector: default
+      format: [camelCase]
+      leadingUnderscore: allowSingleOrDouble
+    - selector: default
+      filter:
+        regex: "^([A-Z]|_+id|__call__)$"
+        match: true
+      format: null
+    - selector: variable
+      modifiers: [destructured]
+      filter:
+        regex: "^_id$"
+        match: false
+      format: [camelCase, PascalCase, UPPER_CASE, snake_case]
+    - selector: variable
+      format: [camelCase, PascalCase, UPPER_CASE]
+      modifiers: [const]
+      leadingUnderscore: allowSingleOrDouble
+    - selector: property
+      format: [camelCase, PascalCase, UPPER_CASE, snake_case]
+      leadingUnderscore: allowSingleOrDouble
+    - selector: [function, parameter, parameterProperty, objectLiteralMethod]
+      filter:
+        regex: __call__
+        match: false
+      format: [camelCase, PascalCase]
+      leadingUnderscore: allowSingleOrDouble
+    - selector: enum
+      format: [PascalCase]
+    - selector: [class, interface, typeAlias, enumMember]
+      format: [PascalCase, camelCase]
+    - selector: typeParameter
+      format: [camelCase, PascalCase, UPPER_CASE]
+  "@typescript-eslint/no-redeclare": 0
 
   class-methods-use-this: 0
   global-require: 0
@@ -57,23 +94,26 @@ rules:
   no-return-await: 0
   no-underscore-dangle: 0
   prefer-destructuring: 0
-  simple-import-sort/imports: 
-   - warn
-   - groups:
-     - ["^\\u0000"]
-     - 
-      - "^(assert|buffer|child_process|cluster|console|constants|crypto|dgram|dns|domain|events|fs|http|https|module|net|os|path|punycode|querystring|readline|repl|stream|string_decoder|sys|timers|tls|tty|url|util|vm|zlib|freelist|v8|process|async_hooks|http2|perf_hooks)(/.*|$)"
-      - "^(?!@?hydrooj)(@?\\w.+)"
-      - "^@?hydrooj"
-      - "^"
-      - "^\\."
+  simple-import-sort/imports:
+    - warn
+    - groups:
+        - ["^\\u0000"]
+        - - "^(assert|buffer|child_process|cluster|console|constants|crypto|dgram|dns|domain|events|fs|http|https|module|net|os|path|punycode|querystring|readline|repl|stream|string_decoder|sys|timers|tls|tty|url|util|vm|zlib|freelist|v8|process|async_hooks|http2|perf_hooks)(/.*|$)"
+          - "^(?!@?hydrooj)(@?\\w.+)"
+          - "^@?hydrooj"
+          - "^"
+          - "^\\."
   simple-import-sort/exports: 0
 settings:
   import/parsers:
-    '@typescript-eslint/parser':
+    "@typescript-eslint/parser":
       - .ts
       - .js
       - .jsx
   import/resolver:
     typescript:
       alwaysTryTypes: true
+# parserOptions:
+#   project:
+#     - './tsconfig.json'
+#     - './packages/**/tsconfig.json'
