core: add daily task: check update

--- a/packages/hydrooj/package.json
+++ b/packages/hydrooj/package.json
@@ -42,6 +42,7 @@
         "p-queue": "^7.1.0",
         "reflect-metadata": "^0.1.13",
         "require-resolve-hook": "^1.1.0",
+        "semver": "^7.3.5",
         "serialize-javascript": "^6.0.0",
         "sockjs": "^0.3.24",
         "source-map-support": "^0.5.21",
@@ -64,6 +65,7 @@
         "@types/mongodb": "^3.6.20",
         "@types/nodemailer": "^6.4.4",
         "@types/notp": "^2.0.1",
+        "@types/semver": "^7.3.9",
         "@types/serialize-javascript": "^5.0.2",
         "@types/sockjs": "^0.3.33",
         "@types/source-map-support": "^0.5.4",
